[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp1_lbgs"
version = "0.1.0"
description = "Analysis of Lyman-break galaxies in Rubin DP1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "astropy",
    "pandas",
    "pyarrow",
    "seaborn",
    "astroquery",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "jupyterlab",
]

[project.urls]
Homepage = "https://github.com/jfcrenshaw/dp1_lbgs"
Repository = "https://github.com/jfcrenshaw/dp1_lbgs"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dp1_lbgs*"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true